Aug-23 morning commit

--- a/exam_app/templates/base.html
+++ b/exam_app/templates/base.html
@@ -458,7 +458,7 @@ body.dark .home .text{
                 <li class="bottom-content"> 
                     <a href="{% url 'subject' %}"> 
                         <i class="bx bx-book-open icon"></i> 
-                        <span class="text nav-text">SKills</span> 
+                        <span class="text nav-text">Skills</span> 
                     </a> 
                 </li> 
                 
