--- a/exam_app/templates/dashboard/skill_set_config.html
+++ b/exam_app/templates/dashboard/skill_set_config.html
@@ -247,11 +247,11 @@
         <tr>
           <th>S.No</th>
           <th>Job Position</th>
-          <th>SKill</th>
+          <th>Skill</th>
           <th>Level</th>
-          <th>No. of Questions</th>
+          <th>No.of.Questions</th>
           <th>Cutoff Marks</th>
-          <th>Duration(in min)</th>
+          <th>Duration(in mins)</th>
           <th>Active</th>
           <th>Actions</th>
         </tr>
