--- a/exam_app/templates/registration/login.html
+++ b/exam_app/templates/registration/login.html
@@ -204,4 +204,9 @@
     </div> 
   </div>
 </body>
+<script type="text/javascript">
+  function preventBack(){window.history.forward()};
+  setTimeout("preventBack()",0);
+    window.onunload = function(){null;}
+</script>
 </html>
