--- a/exam_app/templates/dashboard/candidate_dashboard.html
+++ b/exam_app/templates/dashboard/candidate_dashboard.html
@@ -484,7 +484,7 @@ input[type="date"]:focus {
     <div class="row">
 
       <div class="col-12 dashboard-header">
-        <h5 class="dashboard-title">Candidate dashboard</h5>
+        <h5 class="dashboard-title">Candidate Dashboard</h5>
       </div>
       <form method="GET" class="form-inline">
         
