--- a/exam_app/templates/dashboard/dashboard.html
+++ b/exam_app/templates/dashboard/dashboard.html
@@ -419,6 +419,11 @@ input[type="date"]:focus {
   
         </style>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript">
+    function preventBack(){window.history.forward()};
+    setTimeout("preventBack()",0);
+      window.onunload = function(){null;}
+  </script>
 </head>
 
 <!-- style="border-radius: 20px;" -->
