--- a/exam_app/templates/dashboard/exam_submission.html
+++ b/exam_app/templates/dashboard/exam_submission.html
@@ -191,6 +191,11 @@
         }
       }
     </style>
+    <script type="text/javascript">
+      function preventBack(){window.history.forward()};
+      setTimeout("preventBack()",0);
+        window.onunload = function(){null;}
+    </script>
   </head>
   <body>
     <div class="wrapper">
