--- a/exam_app/templates/exam_portal/camera_part.html
+++ b/exam_app/templates/exam_portal/camera_part.html
@@ -1,57 +1,155 @@
-<!-- exam.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Online Exam</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Question Sets</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+
+
+  </style>
 </head>
 <body>
-    <h1>{{ exam.title }}</h1>
-    <!-- Display exam questions and answers here... -->
 
-    <div id="timer">Time remaining: <span id="countdown"></span></div>
+<div class="container">
+  <ul class="nav nav-tabs" id="myTabs">
+    {% for set_name, questions_set in questions.items %}
+    <li class="nav-item">
+      <a class="nav-link {% if forloop.first %}active{% endif %}" data-toggle="tab" href="#{{ set_name }}">{{ set_name }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+  <div class="tab-content">
+    {% for set_name, questions_set in questions.items %}
+    <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="{{ set_name }}">
+      <h3>{{ set_name }}</h3>
+      <div class="question-container">
+        {% for question, options in questions_set.items %}
+        <div class="question" id="{{ set_name }}-question-{{ forloop.index }}">
+          <h4>{{ question }}</h4>
+          {% comment %} {% for j in options %} {% endcomment %}
+          {% comment %} <input type="radio" id="{{ set_name }}-option{{ forloop.index }}-{{ forloop.parentloop.index0 }}" name="{{ set_name }}${{ forloop.parentloop.index0 }}${{ user_id }}" value="{{ option }}" onclick="submitAnswer('{{ option }}')">
+          <label for="{{ set_name }}-option{{ forloop.index }}-{{ forloop.parentloop.index0 }}">{{ option }}</label><br> {% endcomment %}
+          <input type="radio" id="option1" name="{{options.4}}${{options.5}}${{user_id}}" value="{{options.0}}" onclick="submitAnswer('{{options.0}}')">
+          <label for="option1">{{options.0}}</label><br>
+          <input type="radio" id="option2" name="{{options.4}}${{options.5}}${{user_id}}" value="{{options.1}}" onclick="submitAnswer('{{options.1}}')">
+          <label for="option2">{{options.1}}</label><br>
+          <input type="radio" id="option3" name="{{options.4}}${{options.5}}${{user_id}}" value="{{options.2}}" onclick="submitAnswer('{{options.2}}')">
+          <label for="option3">{{options.2}}</label><br>
+          <input type="radio" id="option4" name="{{options.4}}${{options.5}}${{user_id}}" value="{{options.3}}" onclick="submitAnswer('{{options.3}}')">
+          <label for="option4">{{options.3}}</label>
+          
+        </div>
+        {% endfor %}
+        <div class="question-navigation row">
+          <div class="col-4">
+            <button class="btn btn-primary" id="prevButton-{{ set_name }}" onclick="prevQuestion('{{ set_name }}')">Previous</button>
+          </div>
+          <div class="col-4 text-center">
+            <button class="btn btn-danger" onclick="clearSelection('{{j.4}}${{j.5}}${{user_id}}')">Clear Selection</button>
+          </div>
+          <div class="col-4 text-right">
+            <button class="btn btn-primary" id="nextButton-{{ set_name }}" onclick="nextQuestion('{{ set_name }}')">Next</button>
+          </div>
+        </div>
 
-    <script>
-        // JavaScript code for the countdown timer
-        var countdownEl = document.getElementById('countdown');
-        var totalDuration = countdownEl.dataset.totalDuration;
-        var countDownDate = new Date().getTime() + (totalDuration * 60 * 1000);
+  
+        
+        
+        
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 
-        // Check if the timestamp exists in the local storage
-        var storedTimestamp = localStorage.getItem('countDownDate');
-        if (storedTimestamp) {
-            countDownDate = parseInt(storedTimestamp, 10);
-        } else {
-            // Save the initial timestamp in the local storage
-            localStorage.setItem('countDownDate', countDownDate);
-        }
+<!-- JavaScript code -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+  // Initialize the question indices for each set
+  var questionIndices = {};
+  {% for set_name, question_set in questions.items %}
+  questionIndices['{{ set_name }}'] = 0;
+  {% endfor %}
 
-        // Function to update the timer
-        function updateTimer() {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
+  // Function to update navigation buttons based on the current question
+  function updateNavigationButtons(questionSetId, currentIndex) {
+    var questionSetDiv = document.getElementById(questionSetId);
+    var questionDivs = questionSetDiv.querySelectorAll(".question");
 
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    var prevButton = document.getElementById("prevButton-" + questionSetId);
+    var nextButton = document.getElementById("nextButton-" + questionSetId);
 
-            document.getElementById("countdown").innerHTML = hours + ":"
-            + minutes + ":" + seconds + "";
+    if (currentIndex === 0) {
+      prevButton.style.display = "none"; // Hide Previous button on the first question
+    } else {
+      prevButton.style.display = "block";
+    }
 
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("countdown").innerHTML = "EXPIRED";
-                alert("Your time is up. Please submit your answers.");
-                window.location.href = "{% url 'submission' %}?level={{level}}&applied_for={{appliedfor}}&user={{user_id}}";
-            }
-        }
+    if (currentIndex === questionDivs.length - 1) {
+      nextButton.style.display = "none"; // Hide Next button on the last question
+    } else {
+      nextButton.style.display = "block";
+    }
+  }
 
-        // Update the count down every 1 second
-        var x = setInterval(updateTimer, 1000);
+  // Function to show/hide questions based on the current index
+  function showQuestionAtIndex(questionSetId, currentIndex) {
+    var questionSetDiv = document.getElementById(questionSetId);
+    var questionDivs = questionSetDiv.querySelectorAll(".question");
 
-        // When the page is reloaded, remove the timestamp from local storage to reset the timer
-        window.addEventListener('beforeunload', function() {
-            localStorage.removeItem('countDownDate');
-        });
-    </script>
+    // Hide all questions
+    questionDivs.forEach(function (questionDiv) {
+      questionDiv.style.display = "none";
+    });
+
+    // Show the current question
+    questionDivs[currentIndex].style.display = "block";
+  }
+
+  // Function to navigate to the next question
+  function nextQuestion(questionSetId) {
+    var currentQuestionIndex = questionIndices[questionSetId];
+    var questionSetDiv = document.getElementById(questionSetId);
+    var questionDivs = questionSetDiv.querySelectorAll(".question");
+
+    if (currentQuestionIndex < questionDivs.length - 1) {
+      questionIndices[questionSetId]++;
+      currentQuestionIndex = questionIndices[questionSetId];
+      updateNavigationButtons(questionSetId, currentQuestionIndex);
+      showQuestionAtIndex(questionSetId, currentQuestionIndex);
+    }
+  }
+
+  // Function to navigate to the previous question
+  function prevQuestion(questionSetId) {
+    var currentQuestionIndex = questionIndices[questionSetId];
+
+    if (currentQuestionIndex > 0) {
+      questionIndices[questionSetId]--;
+      currentQuestionIndex = questionIndices[questionSetId];
+      updateNavigationButtons(questionSetId, currentQuestionIndex);
+      showQuestionAtIndex(questionSetId, currentQuestionIndex);
+    }
+  }
+
+  // Initialize the first question in each set
+  {% for set_name, question_set in questions.items %}
+  showQuestionAtIndex('{{ set_name }}', 0);
+  updateNavigationButtons('{{ set_name }}', 0);
+  {% endfor %}
+
+  function clearSelection(name) {
+    var radios = document.getElementsByName(name);
+    for (var i = 0; i < radios.length; i++) {
+        radios[i].checked = false;
+          }
+          submitAnswer();
+      }
+</script>
+
 </body>
 </html>
