--- a/exam_app/templates/exam_portal/exam_portal_1.html
+++ b/exam_app/templates/exam_portal/exam_portal_1.html
@@ -66,7 +66,9 @@
         {% for key,value in questions.items %}
         <button class="tablinks" onclick="openTab(event, '{{key}}', 1)" {% if forloop.first %}id="defaultOpen"{% endif %}>{{key}}</button>
         {% endfor %}
-        <button id="timer"></button>
+        <div class="d-flex flex-col justify-content-end ">
+          <button id="timer" style="background-color:red; color:white"></button>
+        </div>
       </div>
       
     
