initcap issue in login page

--- a/exam_app/templates/registration/login.html
+++ b/exam_app/templates/registration/login.html
@@ -186,7 +186,7 @@
           <br>
           <div class="row justify-content-center">
             <div class="col-md-8 text-center">
-              <small>Don't have an account? <a href="{% url 'registration' %}">Register here</a></small>
+              <small>Don't have an Account? <a href="{% url 'registration' %}">Register Here</a></small>
             </div>
           </div>
         </div>
